Creating an new class person and make an inheritance between that class with employee and customer

--- a/AutoRepairShop/AutoRepairShop.csproj
+++ b/AutoRepairShop/AutoRepairShop.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Employee.cs" />
+    <Compile Include="Models\Person.cs" />
     <Compile Include="Models\Shop.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
