Adding Car, Invoice, Repair, Part classes to finalize the project

--- a/AutoRepairShop/AutoRepairShop.csproj
+++ b/AutoRepairShop/AutoRepairShop.csproj
@@ -43,9 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Car.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Employee.cs" />
+    <Compile Include="Models\Invoice.cs" />
+    <Compile Include="Models\Part.cs" />
     <Compile Include="Models\Person.cs" />
+    <Compile Include="Models\Repair.cs" />
     <Compile Include="Models\Shop.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
